--- a/package.json
+++ b/package.json
@@ -10,5 +10,10 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1"
+  },
+  "devDependencies": {
+    "@babel/cli": "7.4.4",
+    "@babel/core": "7.4.5",
+    "@babel/preset-react": "7.0.0"
   }
 }
