--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "build-frontend": "babel ./frontend/src -d ./public/js",
-    "start": "node backend/server.js"
+    "start": "node backend/server.js",
+    "test-backend": "jest ./backend/logic.test.js"
   },
   "author": "",
   "license": "ISC",
